# cachesql

./: .gitlab-ci.yml  .travis.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
cachesql/: __init__.py  serializer.py  sql.py  store.py  utils.py
sqlcache/: __init__.py  sql.py  store.py  utils.py
tests/: conftest.py  test_cachesql.py  test_serializer.py  test_sql.py  test_sqlcache.py  test_store.py  test_utils.py
