[tool.poetry]
name = "cachesql"
version = "0.2.1"
description = "Fast, resilient and reproducible data analysis with cached SQL queries"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
homepage = "https://github.com/felipeam86/cachesql"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"
SQLAlchemy = "^1.4.0"
pyarrow = ">=7.0.0,<9.0.0"
sqlparse = "^0.4.2"
joblib = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
