[tool.poetry]
name = "cachesql"
version = "0.3.0"
description = "Fast, resilient and reproducible data analysis with cached SQL queries"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
homepage = "https://github.com/felipeam86/cachesql"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = ">=1.5.3,<3.0.0"
SQLAlchemy = ">=1.4.0,<3.0.0"
pyarrow = ">=10.0.0"
sqlparse = "^0.4.4"
joblib = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
ruff = "^0.0.282"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
